<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="zyzzyxtech.com.trellochallenge.ui.ContactActivity"
                android:background="#80216883">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_author"
        android:id="@+id/authorName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:ems="10"
        android:id="@+id/auth_email"
        android:layout_below="@+id/authorName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/auth_email"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:ems="10"
        android:id="@+id/auth_phone"
        android:layout_below="@+id/auth_email"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/auth_phone"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_website"
        android:layout_below="@+id/auth_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/auth_web_site"
        android:textColor="@android:color/white"
        android:autoLink="web"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_email"
        android:layout_above="@+id/auth_phone"
        android:layout_toLeftOf="@+id/auth_email"
        android:layout_toStartOf="@+id/auth_email"
        android:src="@drawable/ic_action_email"
        android:contentDescription="@string/email_icon_label"
        android:layout_marginTop="9dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_phone"
        android:src="@drawable/ic_action_phone"
        android:contentDescription="@string/phone_icon_label"
        android:layout_alignTop="@+id/auth_phone"
        android:layout_alignLeft="@+id/img_web"
        android:layout_alignStart="@+id/img_web"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_web"
        android:src="@drawable/ic_action_web_site"
        android:layout_below="@+id/auth_phone"
        android:layout_toLeftOf="@+id/auth_website"
        android:layout_toStartOf="@+id/auth_website"
        android:contentDescription="@string/img_web_label"
        android:layout_marginTop="9dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf_resume_button"
        android:id="@+id/pdf_button"
        android:layout_below="@+id/auth_website"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#ff00A4FF"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"/>

</RelativeLayout>
