<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#ff216883">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title_text"
        android:id="@+id/mainTitle"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_description_text"
        android:id="@+id/challenge_description"
        android:layout_below="@+id/mainTitle"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contains_letters"
        android:id="@+id/container_string"
        android:layout_below="@+id/challenge_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textView_item_top_margin"
        android:background="#80ffffff"
        android:padding="10dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_description_cont"
        android:id="@+id/challenge_description_cont"
        android:layout_below="@+id/container_string"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/textView_item_top_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function_text"
        android:id="@+id/function"
        android:layout_below="@+id/challenge_description_cont"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textView_item_top_margin"
        android:padding="10dp"
        android:background="#80ffffff"
        android:textColor="@android:color/black"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is"
        android:id="@+id/is_textView"
        android:layout_below="@+id/function"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/textView_item_top_margin"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash_string"
        android:id="@+id/hash_string"
        android:layout_below="@+id/is_textView"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/textView_item_top_margin"
        android:background="#80ffffff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_answer"
        android:id="@+id/go_button"
        android:layout_below="@+id/hash_string"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top_margin"
        android:background="#ff00A4FF"
        android:textColor="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"/>
</RelativeLayout>
