<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="zyzzyxtech.com.trellochallenge.ui.Solution"
                android:background="#ff216883">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/background_android"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/background_android"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="--------"
        android:id="@+id/hash_answer"
        android:layout_alignBottom="@+id/background_android"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="193dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:background="#80ffffff"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_author_title"
        android:id="@+id/app_author_title"
        android:layout_below="@+id/background_android"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_author"
        android:id="@+id/app_author"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_below="@+id/app_author_title"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_button"
        android:id="@+id/contact_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff00A4FF"
        android:textColor="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"/>

</RelativeLayout>
